change the visit text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="hero-image">
         <div class="hero-text">
-            <h1 class="visit-txt">Visit Radzyń Podlaski</h1>
+            <h1 class="visit-txt">Visit Radzyń Podlaski now</h1>
             <h2 class="more-txt">Our city is friendly and charming. We invite you to visit the Potocki Palace. </h2>
         </div>
     </div>
