--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>        
     <div class="guide">
         <div class="guide-card">
-            <img class="avatar" src="/images/madchuck.jpg" alt="">
+            <img class="avatar" src="images/madchuck.jpg" alt="">
             <div class="guide-txt">
                 <h3>Your guide</h3>
                 <p>I will show you everything interesting in my city and allaround.</p>
